// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPublishAdminForm /> renders correctly empty 1`] = `
<div
  className="col-md-12"
>
  <div
    className="box box-primary container-fluid"
  >
    <ProjectAdminFormstyle__ProjectBoxHeader>
      <h4>
        <FormattedMessage
          id="global.publication"
          values={Object {}}
        />
      </h4>
    </ProjectAdminFormstyle__ProjectBoxHeader>
    <div
      className="box-content"
    >
      <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
        <Field
          addonAfter={
            <i
              className="cap-calendar-2"
            />
          }
          component={[Function]}
          id="project-publishedAt"
          label={
            <FormattedMessage
              id="global.date.text"
              values={Object {}}
            />
          }
          name="publishedAt"
          type="datetime"
        />
      </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
      <ProjectAdminFormstyle__PermalinkWrapper>
        <strong>
          <FormattedMessage
            id="permalink"
            values={Object {}}
          />
           :
        </strong>
         
        <a
          target="blank"
        />
      </ProjectAdminFormstyle__PermalinkWrapper>
    </div>
  </div>
</div>
`;

exports[`<ProjectPublishAdminForm /> renders correctly with a project with locale 1`] = `
<div
  className="col-md-12"
>
  <div
    className="box box-primary container-fluid"
  >
    <ProjectAdminFormstyle__ProjectBoxHeader>
      <h4>
        <FormattedMessage
          id="global.publication"
          values={Object {}}
        />
      </h4>
    </ProjectAdminFormstyle__ProjectBoxHeader>
    <div
      className="box-content"
    >
      <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
        <Field
          addonAfter={
            <i
              className="cap-calendar-2"
            />
          }
          component={[Function]}
          id="project-publishedAt"
          label={
            <FormattedMessage
              id="global.date.text"
              values={Object {}}
            />
          }
          name="publishedAt"
          type="datetime"
        />
        <Field
          aria-autocomplete="list"
          aria-haspopup="true"
          autoload={true}
          component={[Function]}
          id="project-locale"
          label={
            <FormattedMessage
              id="form.label_locale"
              values={Object {}}
            />
          }
          labelClassName="control-label"
          loadOptions={[Function]}
          name="locale"
          placeholder={
            <FormattedMessage
              id="locale.all-locales"
              values={Object {}}
            />
          }
          role="combobox"
          selectFieldIsObject={true}
        />
      </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
      <ProjectAdminFormstyle__PermalinkWrapper>
        <strong>
          <FormattedMessage
            id="permalink"
            values={Object {}}
          />
           :
        </strong>
         
        <a
          href="/sku"
          target="blank"
        >
          /sku
        </a>
      </ProjectAdminFormstyle__PermalinkWrapper>
    </div>
  </div>
</div>
`;

exports[`<ProjectPublishAdminForm /> renders correctly with a project without locale 1`] = `
<div
  className="col-md-12"
>
  <div
    className="box box-primary container-fluid"
  >
    <ProjectAdminFormstyle__ProjectBoxHeader>
      <h4>
        <FormattedMessage
          id="global.publication"
          values={Object {}}
        />
      </h4>
    </ProjectAdminFormstyle__ProjectBoxHeader>
    <div
      className="box-content"
    >
      <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
        <Field
          addonAfter={
            <i
              className="cap-calendar-2"
            />
          }
          component={[Function]}
          id="project-publishedAt"
          label={
            <FormattedMessage
              id="global.date.text"
              values={Object {}}
            />
          }
          name="publishedAt"
          type="datetime"
        />
        <Field
          aria-autocomplete="list"
          aria-haspopup="true"
          autoload={true}
          component={[Function]}
          id="project-locale"
          label={
            <FormattedMessage
              id="form.label_locale"
              values={Object {}}
            />
          }
          labelClassName="control-label"
          loadOptions={[Function]}
          name="locale"
          placeholder={
            <FormattedMessage
              id="locale.all-locales"
              values={Object {}}
            />
          }
          role="combobox"
          selectFieldIsObject={true}
        />
      </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
      <ProjectAdminFormstyle__PermalinkWrapper>
        <strong>
          <FormattedMessage
            id="permalink"
            values={Object {}}
          />
           :
        </strong>
         
        <a
          href="/sku"
          target="blank"
        >
          /sku
        </a>
      </ProjectAdminFormstyle__PermalinkWrapper>
    </div>
  </div>
</div>
`;

exports[`<ProjectPublishAdminForm /> renders correctly without multilangue 1`] = `
<div
  className="col-md-12"
>
  <div
    className="box box-primary container-fluid"
  >
    <ProjectAdminFormstyle__ProjectBoxHeader>
      <h4>
        <FormattedMessage
          id="global.publication"
          values={Object {}}
        />
      </h4>
    </ProjectAdminFormstyle__ProjectBoxHeader>
    <div
      className="box-content"
    >
      <ProjectAdminFormstyle__ProjectSmallFieldsContainer>
        <Field
          addonAfter={
            <i
              className="cap-calendar-2"
            />
          }
          component={[Function]}
          id="project-publishedAt"
          label={
            <FormattedMessage
              id="global.date.text"
              values={Object {}}
            />
          }
          name="publishedAt"
          type="datetime"
        />
      </ProjectAdminFormstyle__ProjectSmallFieldsContainer>
      <ProjectAdminFormstyle__PermalinkWrapper>
        <strong>
          <FormattedMessage
            id="permalink"
            values={Object {}}
          />
           :
        </strong>
         
        <a
          target="blank"
        />
      </ProjectAdminFormstyle__PermalinkWrapper>
    </div>
  </div>
</div>
`;
